--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-            <ul class="navbar-nav justify-content-center ">
+            <ul class="navbar-nav">
                 <li class="nav-item m-1">
                     <a href="#" class="nav-link btn btn-outline-dark">Nivel1</a>
                 </li>
@@ -55,59 +55,61 @@
                 </li>
                 <li class="nav-item m-1"><a href="#" class="nav-link btn btn-outline-dark">Nivel1</a></li>
             </ul>
-             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
+   
         </nav>
         <!--CUERPO-->
    <div class="row w-100" >
-    <section  class="mx-4 col-8">
-        <article>
+
+    <section  class="ml-5 col-8">
+        <article class="border border-info p-2 mt-3">
             <h2>Titulo1</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
         </article>
-         <article>
+         <article class="border border-info p-2 mt-3">
             <h2>Titulo2</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
         </article>
-        <article>
+        <article class="border border-info p-2 mt-3">
                 <h2>Titulo3</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
         </article>
-        <article>
+        <article class="border border-info p-2 mt-3">
                 <h2>Titulo4</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
         </article>
-        <article>
+        <article class="border border-info p-2 mt-3">
                 <h2>Titulo5</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque dolores rerum tempora molestias. Dolorem debitis quibusdam voluptate ratione architecto? Magnam eius praesentium consequatur fugiat asperiores, corporis rem quasi labore ea!</p>
         </article>
     </section>
     <aside class="col-3">
-        <article>
-            <h2>Publicidad</h2>
+        <article class="border border-info p-2 mt-3">
+            <h4>Publicidad</h4>
             <img src="img/imagen.jpg" alt="imagen">
         </article>
-        <article>
-                <h2>Publicidad</h2>
+        <article class="border border-info p-2 mt-3">
+                <h4>Publicidad</h4>
                 <img src="img/imagen.jpg" alt="imagen">
         </article>
-        <article>
-                <h2>Publicidad</h2>
+        <article class="border border-info p-2 mt-3"> 
+                <h4>Publicidad</h4>
                 <img src="img/imagen.jpg" alt="imagen">
         </article>
     </aside>
   </div>
 
-    <footer>
-        <h3>Copy Right-2019</h3>
+    <footer class="bg-dark text-white justify-content-center border mt-2 p-5">
+        <h5>Copy Right-2019</h5>
     </footer>
 </div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
